deploy/luna-edge-master-cilium-clustermesh.yaml
apiVersion: v1
kind: Service
metadata:
  name: luna-master
  namespace: luna-edge
spec:
  selector:
    app: luna-master
    luna-edge.io/cluster: core
  ports:
    - name: manage
      port: 8080
      targetPort: 8080
    - name: replication
      port: 50051
      targetPort: 50051
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: luna-master
  namespace: luna-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: luna-master
      luna-edge.io/cluster: core
  template:
    metadata:
      labels:
        app: luna-master
        luna-edge.io/cluster: core
    spec:
      serviceAccountName: luna-edge-master
      containers:
        - name: master
          image: ghcr.io/jabberwocky238/luna-edge:latest
          imagePullPolicy: Always
          command: ["master"]
          ports:
            - name: manage
              containerPort: 8080
            - name: replication
              containerPort: 50051
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
