deploy/luna-edge-nginx-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-gateway
  namespace: luna-edge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-gateway
  template:
    metadata:
      labels:
        app: nginx-gateway
    spec:
      volumes:
        - name: custom-html
          configMap:
            name: nginx-gateway-html
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: custom-html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: luna-edge
spec:
  selector:
    app: nginx-gateway
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-gateway
  namespace: luna-edge
spec:
  parentRefs:
    - name: luna-edge
      sectionName: web
    - name: luna-edge
      sectionName: websecure
  hostnames:
    - nginx-gateway.cluster-1.app238.com
    # - nginx-lnctl.cluster-1.app238.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-gateway
          port: 80
